--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <section id="login">
             <div id="imagem">
-                <img src="imagens/predio.jpg" alt="">
+                <!--Imagem na CSS-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
