--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post" autocomplete="on">
+                <form action="index.html" method="post" autocomplete="on">
                     <div class="campo">
                         <span class="material-icons">person</span>
                         <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required max="30">
@@ -29,8 +29,8 @@
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
-                    <input type="submit" value="Entar">
-                    <a href="esqueci.html">
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html" class="botao">
                         Esquecia senha <span class="material-icons">mail</span>
                     </a>
                 </form>
